--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,17 @@
     "version": 2,
     "functions": {
         "api/index.php": {
-            "runtime": "vercel-php@0.6.0"
+            "runtime": "vercel-php@0.7.3"
         }
     },
     "routes": [
         {
             "src": "/assets/(.*)",
             "dest": "/public/assets/"
+        },
+        {
+            "src": "/build/(.*)",
+            "dest": "/public/build/"
         },
         {
             "src": "/(.*)",
@@ -18,7 +22,7 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://example-atomik.vercel.app/",
+        "APP_URL": "https://cti-test.vercel.app/",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
